@@ -1205,7 +1205,8 @@
 104) kernel: net: ipv6: fix MLD Query message check.<br>
 105) kernel: net: netfilter: ip[6]t_REJECT: fix wrong transport header pointer in TCP reset.<br>
 106) kernel: net: netfilter: ip6t_REJECT: skip checksum verification for outgoing ipv6 packets.<br>
-107) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
+107) kenrel: net: netfilter: bridge: don't leak skb in error paths.<br>
+108) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
 <br>
 <br>
 <b>3.4.x</b><br>
